# sentinel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT_HEADER_TEMPLATES.md  Cargo.toml  Dockerfile.migrate  Makefile  NOTICE.md  README.md  README_LICENSE_SECTION.md  SECURITY.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  tango.yaml
apps/sentinel-core/: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.migrate  diesel.toml
apps/sentinel-core/benches/: authz_benchmark.rs
apps/sentinel-core/docs/: architecture.md  issue-14-federated-session-bridge.md
apps/sentinel-core/migrations/2025-11-30-150427-0000_add_user_and_auth_tables/: down.sql  up.sql
apps/sentinel-core/migrations/2026-01-22-193704-0000_add_password_hashing/: down.sql  up.sql
apps/sentinel-core/migrations/2026-01-30-075313-0000_add_provider_configs_table/: down.sql  up.sql
apps/sentinel-core/migrations/2026-02-09-180949-0000_add_roles_concept/: down.sql  up.sql
apps/sentinel-core/migrations/2026-02-14-131658-0000_add_policies/: down.sql  up.sql
apps/sentinel-core/migrations/2026-02-28-000001_add_oidc_clients/: down.sql  up.sql
apps/sentinel-core/migrations/2026-02-28-000002_add_oidc_auth_codes/: down.sql  up.sql
apps/sentinel-core/migrations/2026-02-28-000003_add_oidc_signing_keys/: down.sql  up.sql
apps/sentinel-core/migrations/2026-03-01-000001_add_mfa_totp/: down.sql  up.sql
apps/sentinel-core/migrations/2026-03-01-000002_add_mfa_recovery_codes/: down.sql  up.sql
apps/sentinel-core/migrations/2026-03-01-000003_add_api_tokens/: up.sql
apps/sentinel-core/migrations/2026-03-02-000001_add_email_templates/: down.sql  up.sql
apps/sentinel-core/scripts/: gen_diesel_types.sh  test.sh  update_schema_patch.sh
apps/sentinel-core/src/: build.rs  errors.rs  lib.rs  main.rs  schema.patch  schema.rs  schema_enums.rs  schema_enums_impls.rs  schema_models.rs
apps/sentinel-core/src/applications/: mod.rs  (+13 more)
apps/sentinel-core/tests/: admin_invite_test.rs  admin_sessions_test.rs  admin_users_test.rs  api_response_contrac_test.rs  api_token_exchange_test.rs  api_token_test.rs  authenticate_api.rs  create_policy_test.rs  create_provider_config.rs  email_verification_test.rs  federation_supabase_test.rs  health.rs  insights_test.rs  login_test.rs  logout_test.rs  mfa_totp_test.rs  middleware_canary_test.rs  oidc_flow_test.rs  oidc_pkce_test.rs  password_reset_test.rs  password_validation_test.rs  provider_config_test.rs  rate_limit_test.rs  register_user_api.rs  security_headers_test.rs  token_refresh_test.rs  update_policy_test.rs  user_me_test.rs  user_profile_update_test.rs  user_sessions_test.rs
(+183 files in other folders)
